# openai-agents-sdk

./: .env.example  .gitignore  README.md  agent.py  main.py  pyproject.toml
First_openai_python_sdk_L1/: openai-python-sdk-01.ipynb  openai-python-sdk-02 (1).ipynb
notebooks/: 01_agents_sdk_basics.ipynb  02_creating_agents.ipynb  04_tools_mastery.ipynb
openai_agents_sdk_L2/: openai_agents.py
openai_officail_L3/: 01_agents_sdk_basics.ipynb  02_creating_agents.ipynb  03_ollama_with_agents_sdk.ipynb  04_tools_mastery.ipynb
practive_Labs/: Lab1.ipynb  Lab2.ipynb  Lab3.ipynb  Lab4.ipynb
